Atcoder/ABC過去問/C/compiling_error.txt
/Users/kakeshitamasamichi/Desktop/kyopro/Atcoder/ABC過去問/C/ABC148C.cpp:282:4: error: redefinition of 'll lcm(ll, ll)'
  282 | ll lcm(ll a,ll b){
      |    ^~~
/Users/kakeshitamasamichi/Desktop/kyopro/Atcoder/ABC過去問/C/ABC148C.cpp:77:4: note: 'll lcm(ll, ll)' previously defined here
   77 | ll lcm(ll a, ll b){ if(!a || !b) return 0; return a * b / gcd(a, b); }
      |    ^~~
